--- a/render.yaml
+++ b/render.yaml
@@ -21,6 +21,8 @@ services:
         value: "construction-erp.onrender.com,localhost,127.0.0.1"
       - key: FRONTEND_ORIGIN
         value: https://construction-erp.onrender.com
+      - key: CSRF_TRUSTED_ORIGINS
+        value: https://construction-erp.onrender.com,http://construction-erp.onrender.com
       - key: DATABASE_URL
         fromDatabase:
           name: erp-db
